<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoq"
    tools:context="nickl.bddemo.MainActivity">

    <TextView
        android:id="@+id/eti_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/string_bienvenido"
        android:textColor="@android:color/background_light"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editNumero"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="150sp"
        android:layout_marginEnd="20sp"
        android:hint="@string/string_num"
        android:inputType="number"
        android:textColor="@android:color/background_light"
        android:textColorHint="?attr/editTextColor"
        android:textColorLink="@android:color/white"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eti_Login" />

    <EditText
        android:id="@+id/editContraseña"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/string_pass"
        android:inputType="textPassword"
        android:textColor="@android:color/background_light"
        android:textColorHint="?attr/editTextColor"
        android:textColorLink="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNumero" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        android:layout_marginStart="15sp"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="15sp"
        android:background="@android:color/transparent"
        android:text="@string/string_noaccount"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_entrar" />

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="240dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/shape"
        android:onClick="entrar"
        android:text="@string/string_iniciosesion"
        android:textColor="@android:color/background_light"
        android:textColorLink="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editContraseña" />

    <Button
        android:id="@+id/btn_registro"
        android:layout_width="220dp"
        android:layout_height="63dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape"
        android:onClick="registro"
        android:text="REGÍSTRATE"
        android:textColor="@android:color/background_light"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</android.support.constraint.ConstraintLayout>